--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,8 @@ services:
     volumes:
       - ./:/var/www
     networks:
-      - traefik
+      - internal
+
   nginx1:
     image: nginx:alpine
     container_name: nginx1
@@ -18,13 +19,10 @@ services:
       - ./docker/nginx/default1.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - app_1
+    ports:
+      - "80:80"  # Expose to host machine
     networks:
-      - traefik
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.app1.rule=Host(`app1.localhost`)"
-      - "traefik.http.routers.app1.entrypoints=web"
-      - "traefik.http.services.app1.loadbalancer.server.port=80"
+      - internal
 
   db:
     image: mysql:8.0
@@ -39,10 +37,11 @@ services:
     volumes:
       - db_data:/var/lib/mysql
     networks:
-      - traefik
+      - internal
+
 volumes:
   db_data:
 
 networks:
-  traefik:
-    external: true
+  internal:
+    driver: bridge
